...
    <!-- Sections -->
    <string name="menu_item_contact_request">Contact requests</string>
    <string name="menu_item_accounts">Manage accounts</string>
    <string name="menu_item_account">Manage account</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_advanced_settings">Advanced Settings</string>
    <string name="menu_item_account_settings">Account Settings</string>
    <string name="menu_item_plugin_list">Plugins Settings</string>
    <string name="menu_item_share">Share my account</string>
    <string name="menu_item_about">About Jami</string>

    <!-- Dialing Fragment -->
    <string name="dial_number">Dial a number</string>
...

    <!-- Contacts -->
    <string name="add_call_contact_number_to_contacts">Add %1$s?</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_optional">New password (optional)</string>
    <string name="prompt_new_password_repeat">Repeat new password</string>
    <string name="account_create_title">Create a Jami account</string>
    <string name="prompt_new_username">Enter new username</string>
    <string name="prompt_hint_username">Username</string>
    <string name="help_password_choose">Choose a strong password you will remember to protect your Jami account.</string>
    <string name="help_password_enter">Enter your main Jami account password.</string>
    <string name="help_server_enter">Enter URL of management server.</string>
    <string name="help_pin_enter">Enter the PIN from another configured Jami account. Use the \"export Jami account\" feature to obtain a PIN.</string>
...
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_message_warning">Your profile is only shared with your contacts</string>
    <string name="open_the_gallery">Open the gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="registered_name">Registered Name</string>
    <string name="no_registered_name">No name registered</string>
    <string name="identity">Identity</string>
    <string name="account">Account</string>
    <string name="link_new_device">Link a new device</string>
    <string name="devices">Linked devices</string>
    <string name="total_devices">Total devices: </string>
...

    <!-- Wizard -->
    <string name="wizard_status_recommended">Recommended</string>
    <string name="wizard_status_optional">Optional</string>
    <string name="wizard_status_required">Required</string>
    <string name="wizard_username_info">Choose a username for your account</string>
    <string name="wizard_username_button">Choose Username</string>
    <string name="wizard_username_skip">Skip choosing username</string>
    <string name="wizard_password_info">Account password</string>
    <string name="wizard_password_placeholder">Choose a password to encrypt the account key on this device</string>
    <string name="wizard_password_button">Choose password</string>
    <string name="wizard_password_skip">Create account</string>
    <string name="wizard_password_switch">Encrypt account with password</string>
    <string name="wizard_password_warning">Note that the password cannot be recovered</string>
    <string name="wizard_profile_info">Profile is only shared with contacts</string>
    <string name="wizard_profile_button">Save Profile</string>
    <string name="wizard_profile_skip">Skip and do this later</string>
    <string name="fab_path_choose">Choose another file</string>
    <string name="chat_plugins">Chat Plugins</string>

    <!-- Bottom sheet -->
    <string name="bottomSheet_share_btn">Share</string>
    <string name="bottomSheet_dialpad_btn">Dialpad</string>
...
