...
            app:layout_constraintRight_toRightOf="@id/ring_username_txt_box"
            app:layout_constraintTop_toTopOf="@id/ring_username_txt_box"
            app:layout_constraintBottom_toBottomOf="@id/ring_username_txt_box"
            android:layout_marginRight="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account"
            style="@style/WizardButton"
            android:layout_width="@dimen/wizard_card_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/skip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/wizard_username_button"
            android:enabled="false"
            android:theme="@style/ButtonColoredInverse" />

...
