...
                android:layout_marginTop="18dp"
                android:text="@string/help_ring"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ring_create_btn"
                style="@style/WizardButton"
                android:layout_width="@dimen/wizard_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=getString(R.string.account_new_button, R.string.app_name)
                android:drawableLeft="@drawable/baseline_account_circle_white_36"
...
