<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/wizard_card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/wizard_card_padding"
            android:paddingStart="@dimen/wizard_card_padding"
            android:paddingEnd="@dimen/wizard_card_padding"
            android:paddingBottom="10dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/status"
                    app:layout_constraintBottom_toBottomOf="@id/status"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/status"
                    android:textStyle="bold"
                    android:layout_marginRight="4dp"
                    android:text="@string/wizard_profile_info"
                    />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/wizard_status_optional"
                    android:textSize="@dimen/wizard_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/background_status_optional"
                    android:padding="6dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_contact_picture_fallback" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/open_the_gallery"
                    android:text="@string/open_the_gallery"
                    app:backgroundTint="@color/light"
                    app:fabCustomSize="40dp"
                    app:layout_constraintEnd_toStartOf="@+id/camera"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_photo"
                    app:rippleColor="@android:color/white"
                    app:srcCompat="@drawable/baseline_insert_photo_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/take_a_photo"
                    app:backgroundTint="@color/light"
                    app:fabCustomSize="40dp"
                    app:layout_constraintEnd_toStartOf="@+id/remove_photo"
                    app:layout_constraintStart_toEndOf="@+id/gallery"
                    app:layout_constraintTop_toBottomOf="@id/profile_photo"
                    app:rippleColor="@android:color/white"
                    app:srcCompat="@drawable/baseline_photo_camera_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/remove_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:contentDescription="@string/remove_photo"
                    android:visibility="gone"
                    app:backgroundTint="@color/light"
                    app:fabCustomSize="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/camera"
                    app:layout_constraintTop_toBottomOf="@id/profile_photo"
                    app:rippleColor="@android:color/white"
                    app:srcCompat="@drawable/baseline_cancel_24"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/profile_name_hint"
                    android:inputType="textCapWords"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/baseline_account_crop_24"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_create_account"
                    style="@style/WizardButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_profile_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/skip_create_account"
                    style="@style/TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_profile_skip"
                    android:textColor="@color/grey_500" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>