<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.glowmate.account.AccountWizardActivity"
    android:clipToPadding="false"
    android:clipChildren="false" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/wizard_card_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/wizard_card_padding"
        android:paddingStart="@dimen/wizard_card_padding"
        android:paddingEnd="@dimen/wizard_card_padding"
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        android:clipChildren="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:text="@string/wizard_username_info"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizard_status_recommended"
                android:textSize="@dimen/wizard_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/background_status_recommended"
                android:padding="6dp"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_username_txt_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="18dp"
                app:startIconDrawable="@drawable/baseline_account_crop_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/prompt_hint_username"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/ring_username_availability_spinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="invisible"
                app:layout_constraintRight_toRightOf="@id/input_username_txt_box"
                app:layout_constraintTop_toTopOf="@id/input_username_txt_box"
                app:layout_constraintBottom_toBottomOf="@id/input_username_txt_box"
                android:layout_marginRight="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_username"
            style="@style/WizardButton"
            android:layout_width="@dimen/wizard_card_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/wizard_username_button"
            android:enabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_username_skip"
            android:textColor="@color/grey_500"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/wizard_text_size" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
