...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:gravity="center"
                    android:text="@string/account_creation_permissions"
                    android:textSize="24sp" />
...
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/permission_contacts_help"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/create_account"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/account_new_button"
                    android:theme="@style/ButtonColoredInverse" />
...
